tests/NormalTests/paczka1/fuzzy1/65958112.err
Error in line 8: 3xE A180 74,6
Error in line 17: sSB55RQvuY A180 76,30
Error in line 14: sSB55RQvuY S600 26,3
Error in line 9: PML A720 17,7
Error in line 28: sSB55RQvuY A180 166,4
Error in line 33: A67 A180 96,8
Error in line 35: A67 A67 29,8
